--- a/templates/search_employee.html
+++ b/templates/search_employee.html
@@ -75,7 +75,7 @@ function reset_options() {
             </div>
             <p></p>
               <button id="main_search" class="button is-info is-medium" disabled="disabled">Search</button>
-              <button class="button is-info is-medium"><a href="{{ url_for('api_main.get_emp_records') }}">Cancel</button>
+              <button class="button is-info is-medium"><a href="{{ url_for('main.get_emp_records') }}">Cancel</button>
             </div>
         </form>
     </div>
