--- a/templates/delete_emp.html
+++ b/templates/delete_emp.html
@@ -33,7 +33,7 @@
             </div>
             <p></p>
               <button class="button is-info is-medium">Delete</button>
-              <button class="button is-info is-medium"><a href="{{ url_for('api_main.get_emp_records') }}">Cancel</button>
+              <button class="button is-info is-medium"><a href="{{ url_for('main.get_emp_records') }}">Cancel</button>
         </form>
     </div>
 </div>
