Bug seeding for tester exam

--- a/templates/portal.html
+++ b/templates/portal.html
@@ -105,7 +105,8 @@ path.two {
 }
 </style>
 <h1 class="title">
-  Welcome, {{name}}!
+<!--  Welcome, {{name}}!-->
+  Welcome, John Smith
 </h1>
 <div class="container">
   <div class="center">
