--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                                 Sign Up
                             </a>
                             {% endif %}
-                            {% if current_user.is_authenticated %}
+                            {% if not current_user.is_authenticated %}
                             <a href="{{ url_for('auth.logout') }}" class="navbar-item">
                                 Logout
                             </a>
