--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                             <a href="{{ url_for('auth.login') }}" class="navbar-item">
                                 Login
                             </a>
-                            <a href="{{ url_for('auth.signup') }}" class="navbar-item">
+                            <a href="{{ url_for('main.signup') }}" class="navbar-item">
                                 Sign Up
                             </a>
                             {% endif %}
