--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
 <h1 class="title">
   Employee Manager
 </h1>
-<h2 class="subtitle">
-  A simple application to manage Employees
-</h2>
+<p></p>
+<h3 class="subtitle">
+  A portal to manage the personal data of employees in your organisation.
+</h3>
 {% endblock %}
