--- a/templates/login.html
+++ b/templates/login.html
@@ -4,11 +4,11 @@
 <div class="column is-4 is-offset-4">
     <h3 class="title">Login</h3>
     <div class="box">
-        {% with messages = get_flashed_messages() %}
+        {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
-        <div class="notification is-danger">
-        {{ messages[0] }}
-        </div>
+        {% for category, message in messages %}
+        <div class="notification {{ category }}"> {{ message }} </div>
+        {% endfor %}
         {% endif %}
         {% endwith %}
         <form method="POST" action="/login">
@@ -31,6 +31,8 @@
             </div>
             <button class="button is-block is-info is-large is-fullwidth">Login</button>
         </form>
+        <br>
+        <p>Forgot your password? <a style="font-weight:bold" href="/request/reset_password">Reset Password</a>.</p>
     </div>
 </div>
 {% endblock %}
