--- a/static/styles/stylesheet.css
+++ b/static/styles/stylesheet.css
@@ -783,3 +783,15 @@ progress {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.alert.success {
+  background-color: green;
+}
+
+.alert.error {
+  background-color: red;
+}
+
+.alert.warning {
+  background-color: red;
+}
