--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,11 @@
                             <a href="{{ url_for('main.portal') }}" class="navbar-item">
                                 Employee Portal
                             </a>
+                            {% if current_user.is_admin == True %}
+                            <a href="/admin" class="navbar-item">
+                                Admin
+                            </a>
+                            {% endif %}
                             {% endif %}
                             {% if not current_user.is_authenticated %}
                             <a href="{{ url_for('auth.login') }}" class="navbar-item">
