--- a/templates/emp_create.html
+++ b/templates/emp_create.html
@@ -19,18 +19,18 @@ label {
         </div>
         {% endif %}
         {% endwith %}
-        <h3>Employee Profile</h3><br>
+        <p><h3 class="has-text-centered"><strong>Employee Profile</strong></h3></p><br>
         <form method="POST" action="/employee/new">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" list="sal" id="per_title" type="text" name="per_title" placeholder="Title" autofocus="">
-                    <datalist id="sal">
-                      <option value="Mr">
-                      <option value="Mrs">
-                      <option value="Ms">
-                      <option value="Dr">
+                    <select class="input is-large" id="per_title" name="per_title" placeholder="Title">
+                      <option value="">Select</option>
+                        <option value="Mr">Mr</option>
+                        <option value="Mrs">Mrs</option>
+                        <option value="Ms">Ms</option>
+                        <option value="Dr">Dr</option>
                     </option>
-                    </datalist>
+                    </select>
                     </div>
             </div>
             <div class="field">
@@ -51,6 +51,7 @@ label {
             <div class="field">
                 <div class="control">
                     <select class="input is-large" id="type" name="type" placeholder="Employment Type" required>
+                        <option value="">Select</option>
                         <option value="Permanent">Permanent</option>
                         <option value="Contractor">Contractor</option>
                         <option value="FTC">FTC</option>
@@ -62,14 +63,14 @@ label {
             </div>
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" list="emp_status" id="status" name="status" placeholder="Employment Status" autocomplete="off" autofocus="" required>
-                    <datalist id="emp_status">
-                      <option value="Active">
-                      <option value="Resigned">
-                      <option value="Terminated">
-                      <option value="Sabbatical">
+                    <select class="input is-large" id="status" name="status" placeholder="Employment Status" required>
+                        <option value="">Select</option>
+                        <option value="Active">Active</option>
+                        <option value="Resigned">Resigned</option>
+                        <option value="Terminated">Terminated</option>
+                        <option value="Sabbatical">Sabbatical</option>
                     </option>
-                    </datalist>
+                    </select>
                 </div>
             </div>
             <div class="field">
@@ -84,7 +85,7 @@ label {
                     <input class="input is-large" id="salary" type="number" step="1" pattern="\d+" name="salary" placeholder="Annual Salary" autofocus="" required>
                 </div>
             </div>
-            <p><h3>Employee Contact</h3></p><br>
+            <p><h3 class="has-text-centered"><strong>Employee Contact</strong></h3></p><br>
             <div class="field">
                 <div class="control">
                     <input class="input is-large" id="address" type="text" name="address" onkeyup="expand(this);" placeholder="Address" autofocus="">
@@ -94,10 +95,10 @@ label {
                 <div class="control">
                     <input class="input is-large" id="phone" type="number" step="1" pattern="\d+" name="phone" placeholder="Phone Number" autofocus="">
                     <input class="input is-large" id="mobile" type="number" step="1" pattern="\d+" name="mobile" placeholder="Mobile Number" autofocus="" required>
-                    <input class="input is-large" type="text" id="email" name="email" onkeyup="expand(this);" placeholder="Email" autofocus="" required>
+                    <input class="input is-large" type="email" id="email" name="email" onkeyup="expand(this);" placeholder="Email" autofocus="" required>
                 </div>
             </div>
-            <p><h3>Employee Bank Details</h3></p><br>
+            <p><h3 class="has-text-centered"><strong>Employee Bank</strong></h3></p><br>
             <div class="field">
                 <div class="control">
                     <input class="input is-large" type="text" id="bank" name="bank" onkeyup="expand(this);" placeholder="Bank Name" autofocus="">
