--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,7 +8,7 @@
             <div class="field">
                 <div class="control">
                     {{ form.csrf_token }}
-                    {{ form.email(placeholder="email", class="input is-large", type="email") }}
+                    {{ form.email(placeholder="Email", class="input is-large", type="email", autofocus="on") }}
                     {% if form.email.errors %}
                     {% for error in form.email.errors %}
                     <div class="notification is-danger">
@@ -22,7 +22,7 @@
             <div class="field">
                 <div class="control">
                     <span class="error">
-                    {{ form.name(placeholder="name", class="input is-large", type="name") }}
+                    {{ form.name(placeholder="Name", class="input is-large", type="name") }}
                     {% if form.name.errors %}
                     {% for error in form.name.errors %}
                     {{ error }}
@@ -35,7 +35,7 @@
             <div class="field">
                 <div class="control">
                     <span class="error">
-                    {{ form.password(placeholder="password", class="input is-large", type="password") }}
+                    {{ form.password(placeholder="Password", class="input is-large", type="password") }}
                     {% if form.password.errors %}
                     {% for error in form.password.errors %}
                     {{ error }}
@@ -48,7 +48,7 @@
             <div class="field">
                 <div class="control">
                     <span class="error">
-                    {{ form.confirm(placeholder="confirm", class="input is-large", type="password") }}
+                    {{ form.confirm(placeholder="Confirm Password", class="input is-large", type="password") }}
                     {% if form.confirm.errors %}
                     {% for error in form.confirm.errors %}
                     {{ error }}
@@ -57,9 +57,22 @@
                     </span>
                 </div>
             </div>
+            <div class="field">
+                <div class="control">
+                    <span class="error">
+                    {{ form.dob(placeholder="Date of Birth", class="input is-large", type="text", onfocus="(this.type='date')", onblur="(this.type='text')") }}
+                    {% if form.dob.errors %}
+                    {% for error in form.dob.errors %}
+                    {{ error }}
+                    {% endfor %}
+                    {% endif %}
+                    </span>
+                </div>
+            </div>
             <button class="button is-block is-info is-large is-fullwidth">Sign Up</button>
         </form>
-        <p>Already have an account? <a href="/login">Sign in</a>.</p>
+        <br>
+        <p>Already have an account? <a style="font-weight:bold" href="/login">Login</a>.</p>
     </div>
 </div>
 {% endblock %}
