Added auto signup

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,9 @@
                             </a>
                             {% endif %}
                             {% if current_user.is_authenticated %}
+                            <a href="{{ url_for('auth.modify_password') }}" class="navbar-item">
+                                Change Password
+                            </a>
                             <a href="{{ url_for('auth.logout') }}" class="navbar-item">
                                 Logout
                             </a>
