--- a/templates/activate.html
+++ b/templates/activate.html
@@ -1,4 +1,5 @@
 <p>Welcome! Thanks for signing up. Please follow this link to activate your account:</p>
 <p><a href="{{ confirm_url }}">{{ confirm_url }}</a></p>
+<p>Your temporary password is {{ password }}. Please change after login.</p>
 <br>
 <p>Cheers!</p>
