--- a/templates/emp_create.html
+++ b/templates/emp_create.html
@@ -8,8 +8,17 @@ label {
   display: inline-block;
   width: 140px;
   text-align: left;
+}
+div#loading {
+    width: 60px;
+    height: 60px;
+    display: none;
+    background: url(/static/styles/Hourglass.gif) no-repeat;
+    cursor: wait;
+    }
 </style>
-<div class="container">
+<div id="loading"></div>
+<div id="form" class="container">
     <h2 class="title">New Employee Record</h2>
     <div class="box">
         {% with messages = get_flashed_messages() %}
@@ -107,7 +116,7 @@ label {
                 </div>
             </div>
             <br>
-            <button class="button is-block is-info is-medium is-fullwidth">Create Employee</button>
+            <button class="button is-block is-info is-medium is-fullwidth" onclick="loading();">Create Employee</button>
         </form>
     </div>
 </div>
@@ -150,4 +159,10 @@ label {
     style.width = Math.max(desiredW, textbox.startW) + 'px';
 }
   </script>
+<script type="text/javascript">// <![CDATA[
+        function loading(){
+            $("#loading").show();
+            $("#form").hide();
+        }
+// ]]></script>
 {% endblock %}
