--- a/templates/emp_portal.html
+++ b/templates/emp_portal.html
@@ -110,8 +110,8 @@ path.two {
 <div class="container">
   <div class="center">
 <div class="wrapper1">
-  <a class="cta" href="{{ url_for('auth.create_emp_record') }}">
-    <span>Onboard new employee</span>
+  <a class="cta" href="{{ url_for('auth.get_self_profile') }}">
+    <span>My Profile</span>
     <span>
       <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -140,8 +140,8 @@ path.two {
 </div>
     <p></p>
 <div class="wrapper1">
-  <a class="cta" href="{{ url_for('main.search_emp_record') }}">
-    <span>Search employee</span>
+  <a class="cta" href="{{ url_for('main.my_emp_records') }}">
+    <span>Managed employees</span>
     <span>
       <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
