--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="column is-4 is-offset-4">
-    <h3 class="title">Login</h3>
+    <h3 class="title">Employee Manager</h3>
     <div class="box">
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
